# api-estudos

./: .gitignore  README.md  etl_whatsApp.py  links.txt  log_ingestao.txt  notas-teste.txt  original.py  pyproject.toml  vision_computer_test.ipynb
app/: main.py
app/api/: routes.py
app/database/: supabase_client.py
app/models/: schemas.py
app/parsers/: nfce_parser.py
app/repository/: nfce_repository.py  test_supabase.py
app/scrapers/: sefaz_scraper.py
app/services/: nfce_service.py
app/utils/: normalizers.py  url_validators.py
